<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.animationfade.MainActivity" >

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:background="#dddddd" >

        <Button
            android:id="@+id/red_btn_x"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="#7fff0000"
            android:gravity="center"
            android:text="@string/rotationX" />

        <Button
            android:id="@+id/red_btn_y"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="#7fff0000"
            android:gravity="center"
            android:text="@string/rotationY" />

        <Button
            android:id="@+id/red_btn_z"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="#7fff0000"
            android:gravity="center"
            android:text="@string/rotationZ" />

        <Button
            android:id="@+id/blue_btn_value_anim"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#7f0000ff"
            android:gravity="center"
            android:text="@string/value_anim" />

        <Button
            android:id="@+id/blue_btn_paowuxian"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#7f0000ff"
            android:gravity="center"
            android:text="@string/value_anim_paowuxian" />

        <Button
            android:id="@+id/green_btn_holder"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#7fff0000"
            android:gravity="center"
            android:text="@string/alpha_scale" />

        <Button
            android:id="@+id/green_btn"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:background="#7f00ff00"
            android:gravity="center"
            android:text="@string/anim_set" />

        <Button
            android:id="@+id/green_btn_xml"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="#7f00ff00"
            android:gravity="center"
            android:text="@string/anim_xml" />

        <Button
            android:id="@+id/green_btn_xml_set"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:background="#7f00ff00"
            android:gravity="center"
            android:text="@string/anim_xml_set" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_transition"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/relative_layout"
        android:layout_marginTop="10dp"
        android:background="#dddddd"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="#7fffff00"
            android:text="@string/btn_add" />

        <Button
            android:id="@+id/dlt_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="#7fffff00"
            android:text="@string/btn_dlt" />
    </LinearLayout>

    <Button
        android:id="@+id/view_anim_btn"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/layout_transition"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="#7f00ffff"
        android:gravity="center"
        android:text="@string/btn_value_anim" />

    <Button
        android:id="@+id/camera_btn"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignTop="@id/view_anim_btn"
        android:layout_centerHorizontal="true"
        android:background="#7f00ffff"
        android:gravity="center"
        android:text="@string/btn_camera" />

    <ImageView
        android:id="@+id/drawable_anim_image_view"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/view_anim_btn"
        android:background="#dddddd"
        android:contentDescription="@null"
        android:src="@drawable/drawable_animation" />

</RelativeLayout>